# mapplauncherd

rpm/: mapplauncherd.spec
src/invoker/: CMakeLists.txt  invoker.c
src/launcherlib/: connection.cpp  connection.h  daemon.cpp
